test/good/functions/nested10.px

a = 0

func f(): Void def
    func g(): Void def
        a += 1
    g()

f()
print a
