test/bad/functions/type07.px

func f(y: Int = 0) def
    return

g = f
g(y=1)
